<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_300sdp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@null">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_3sdp">

        <LinearLayout
            android:paddingBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/lbl_set_profile_photo"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp"
                    android:fontFamily="@font/poppins_regular" />

                <ImageView
                    android:visibility="gone"
                    android:id="@+id/IvDialogClose"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_6sdp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/close" />


            </RelativeLayout>

            <TextView
                android:visibility="visible"
                android:id="@+id/tvTakePicture"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_45sdp"
                android:text="@string/lbl_take_camera_picture"
                android:textColor="@color/white"
                android:background="@color/splash_color"
                android:textSize="@dimen/_12sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:fontFamily="@font/poppins_regular" />

            <TextView
                android:visibility="gone"
                android:id="@+id/tvChooseGallery"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_45sdp"
                android:text="@string/lbl_choose_from_gallery"
                android:textColor="@color/white"
                android:background="@color/splash_color"
                android:textSize="@dimen/_12sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="@dimen/_25sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:fontFamily="@font/poppins_regular" />

            <TextView

                android:visibility="gone"
                android:id="@+id/tvChooseDocument"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_45sdp"
                android:text="@string/lbl_choose_document"
                android:textColor="@color/white"
                android:background="@color/splash_color"
                android:textSize="@dimen/_12sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="@dimen/_25sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:fontFamily="@font/poppins_regular" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>