<?xml version="1.0" encoding="utf-8"?>

<layout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="login"
            type="com.muve.muve_it_driver.ui.auth.login.AuthViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.login.LogInActivity">

            <RelativeLayout
                android:id="@+id/parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:onClick="@{login::onBackButton}"
                    android:id="@+id/img_back_arrow"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_margin="@dimen/_18sdp"
                    android:src="@drawable/left_arrow" />

                <TextView
                    android:id="@+id/txt_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_back_arrow"
                    android:layout_marginStart="@dimen/_18sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/tag_log_in"
                    android:textColor="@color/text_color_heading"
                    android:textSize="@dimen/_25ssp" />


                <TextView
                    android:id="@+id/txt_sub_heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_login"
                    android:layout_marginStart="@dimen/_18sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/log_in_sub_heading"
                    android:textColor="@color/text_color_heading"
                    android:textSize="@dimen/_13ssp" />


                <!-- +1 country code-->


                <LinearLayout
                    android:id="@+id/lyt_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_sub_heading"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:orientation="horizontal">


                    <LinearLayout

                        android:id="@+id/linLay"
                        android:onClick="@{login :: onCountryListOpen}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView

                            android:id="@+id/txt_country_code"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_18sdp"
                            android:fontFamily="@font/poppins_medium"
                            android:text="+1"
                            android:textColor="@color/text_color_heading"
                            android:textSize="@dimen/_14ssp" />


                        <ImageView
                            android:id="@+id/img_down_arrow"
                            android:layout_width="@dimen/_12sdp"
                            android:layout_height="@dimen/_12sdp"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:src="@drawable/down_arrow" />



                    </LinearLayout>



                    <EditText
                        android:layout_marginStart="@dimen/_18sdp"
                        android:imeOptions="actionNext"
                        android:id="@+id/edt_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_18sdp"
                        android:background="@null"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/edt_phone_number"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:cursorVisible="false"
                        android:focusedByDefault="false"
                        android:textSize="@dimen/_13ssp" />


                </LinearLayout>


                <View
                    android:id="@+id/view1"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_below="@+id/lyt_phone_number"
                    android:layout_marginStart="@dimen/_18sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_18sdp"
                    android:background="@color/cargo_item_sub_heading_color" />


                 <RelativeLayout
                android:id="@+id/lyt_Password"
                android:layout_below="@+id/view1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_25sdp"
                     android:layout_marginStart="@dimen/_18sdp"
                 android:layout_marginEnd="@dimen/_18sdp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/edt_password"
                    android:inputType="textPassword"
                    android:maxLines="1"

                    android:textSize="@dimen/_13ssp"
                    android:layout_toStartOf="@+id/tv_showclick"
                    />

                     <TextView
                         android:onClick="@{login::showHidePassword}"

                         android:id="@+id/tv_showclick_login"
                         android:text="Show"
                         android:textColor="@color/show"
                         android:fontFamily="@font/poppins_regular"
                         android:textSize="@dimen/_13ssp"
                         android:paddingStart="@dimen/_10sdp"
                         android:paddingEnd="@dimen/_5sdp"
                         android:layout_alignParentEnd="true"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content">

                     </TextView>
                 </RelativeLayout>


                <View
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_below="@+id/lyt_Password"
                    android:layout_marginStart="@dimen/_18sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_18sdp"
                    android:background="@color/cargo_item_sub_heading_color" />




                <LinearLayout
                    android:layout_marginTop="15dp"
                    android:weightSum="2"
                    android:layout_below="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:checked="true"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/_18sdp"
                    android:id="@+id/check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/_1sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/tv_remember_me"
                    android:textColor="@color/text_color_font"
                    android:textSize="@dimen/_12ssp"
                    android:src="@drawable/down_arrow"/>


                <TextView
                    android:gravity="end"
                    android:layout_weight="1"
                    android:id="@+id/txt_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lyt_Password"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/_18sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/tv_forgot_password"
                    android:textColor="@color/text_color_social"
                    android:textSize="@dimen/_12ssp" />

                </LinearLayout>


                <Button
                    android:id="@+id/btn_log_in"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/_18sdp"
                    android:layout_marginEnd="@dimen/_18sdp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/round_background_2"
                    android:fontFamily="@font/poppins_semibold"
                    android:onClick="@{login::onLogInButton}"
                    android:paddingTop="@dimen/_5sdp"
                    android:text="@string/btn_continue"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_15ssp" />
            </RelativeLayout>

        <include

            layout="@layout/popupshow"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
