<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="welcome"
            type="com.muve.muve_it_driver.ui.auth.welcome.WelcomeViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.WelcomeActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_alignParentTop="true"
           >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/cover" />

            <RelativeLayout
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_centerInParent="true"
                android:background="@drawable/rounded_corner_1"
                android:visibility="invisible">

                <ImageView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/muve_it_logo"

                    />

            </RelativeLayout>


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/ryt_lower"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp"
            android:layout_alignParentBottom="true">


            <TextView
                android:id="@+id/txt_welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_note"
                android:textColor="@color/text_color_heading"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="@dimen/_20ssp"
                android:gravity="center_horizontal"
                android:layout_margin="@dimen/_25sdp"
                />

            <Button
                android:onClick="@{welcome ::clickLogInButton}"
                android:id="@+id/btn_log_in"
                android:layout_below="@+id/txt_welcome"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/tag_log_in"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="@dimen/_15ssp"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:background="@drawable/round_background_2"/>

            <Button
                android:onClick="@{welcome :: clickRegisterButton}"
                android:id="@+id/btn_register"
                android:layout_below="@+id/btn_log_in"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/tag_register"
                android:textColor="@color/splash_color"
                android:layout_marginTop="12dp"
                android:textSize="@dimen/_15ssp"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginBottom="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:background="@drawable/rounded_corner_3"/>


        </RelativeLayout>



    </RelativeLayout>
</layout>
